<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">移动图书馆</string>
    <string name="search_lable">search</string>
    <string name="search_hint">请输入学号</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search">书刊检索</string>
    <string name="searchjiansuocileixing">检索词类型:</string>
    <string name="searchci">检索词:</string>
    <string name="pipeifangshi">匹配方式:</string>
    <string name="ziliaoleixing">资料类型:</string>
    <string name="fenguanmingchen">分馆名称:</string>
    <string name="startjiansuo">开始检索</string>
    <string name="forme">上一页</string>
    <string name="next">下一页</string>
    <string name="dangqianyeshu">当前页数:1</string>
    <string name="fanhuidiyiye">返回第一页</string>
    <string-array name="jiansuocileixing">
        <item >所有题名</item>
        <item >著/作者</item>
        <item >标准号(ISBN或ISSN)</item>
        <item >主题词</item>
        <item >出版年</item>
        <item >出版社</item>
        <item >分类号</item>
        <item >题名缩拼</item>
        <item >图书条码</item>
    </string-array>
    <string-array name="pipeifangshi">
        <item >前向匹配</item>
        <item >模糊匹配</item>
        <item >精确匹配</item>
    </string-array>
    <string-array name="ziliaoleixing">
        <item>全部</item>
		<item>中文图书</item>
        <item>西文图书  </item>
		<item>日文图书</item>
		<item>俄文图书</item>
		<item>中文期刊</item>
		<item>西文期刊</item>
		<item>日文期刊</item>
		<item>俄文期刊</item>
		<item>中文可视资料</item>
		<item>西文可视资料</item>
		<item>日文可视资料</item>
		<item>俄文可视资料</item>
		<item>中文古籍</item>
		<item>日文古籍</item>
		<item>中文地图</item>
		<item>西文地图</item>
		<item>日文地图</item>
		<item>俄文地图</item>
		<item>中文电子资源</item>
		<item>西文电子资源</item>
		<item>日文电子资源</item>
		<item>俄文电子资源</item>
    </string-array>
    <string-array name="fenguanmingchen">
        <item >所有分馆</item>
        <item >A健翔桥校区</item>
        <item >B小营校区</item>
        <item >C清河校区</item>
    </string-array>
    

</resources>