<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ff333333" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="#ffffffff"
            android:textSize="22sp"
            />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity" >

        <TableRow>

            <TextView
                android:id="@+id/jiansuocileixing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/searchjiansuocileixing"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/jiansuocileixing2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/jiansuocileixing" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/jiansuoci"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/searchci" />

            <EditText
                android:id="@+id/jiansuoci2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/pipeifangshi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pipeifangshi"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/pipeifangshi2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/pipeifangshi" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/ziliaoleixing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ziliaoleixing"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/ziliaoleixing2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/ziliaoleixing" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/fenguanmingchen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fenguanmingchen"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/fenguanmingchen2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/fenguanmingchen" />
        </TableRow>

        <Button
            android:id="@+id/startjiansuo"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@drawable/cc"
            android:text="@string/startjiansuo" />
    </TableLayout>

</LinearLayout>